RESOLVED FIXED209163
[GStreamer][WebRTC] Audio is not played from an audio element when the srcObject object has unstarted video tracks
https://bugs.webkit.org/show_bug.cgi?id=209163
Summary [GStreamer][WebRTC] Audio is not played from an audio element when the srcObj...
Lauro Moura
Reported 2020-03-16 18:12:19 PDT
bug207041 added to MediaPlayerPrivateMediaStreamAVObjC the feature of audio elements playing audio tracks of videos right away instead of waiting for the video to be loaded. Will mark the test webrtc/audio-video-element-playing.html as failure while this is sorted out (Can't generate an specific GST baseline as the value in the error message can change for each run).
Attachments
Patch (11.15 KB, patch)
2021-04-03 04:57 PDT, Philippe Normand
no flags
Patch (11.17 KB, patch)
2021-04-06 06:26 PDT, Philippe Normand
no flags
Philippe Normand
Comment 1 2020-06-01 11:09:04 PDT
I have a WIP patch...
Philippe Normand
Comment 2 2021-04-03 04:57:08 PDT
Xabier Rodríguez Calvar
Comment 3 2021-04-06 05:13:49 PDT
Comment on attachment 425092 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=425092&action=review > Source/WebCore/platform/mediastream/gstreamer/GStreamerMediaStreamSource.cpp:631 > + if (track->type() == RealtimeMediaSource::Type::Video && !isVideoPlayer) Nit: I prefer to add booleans first in evaluation cause you can short-circuit some calls for the type(), etc.
Philippe Normand
Comment 4 2021-04-06 06:26:24 PDT
EWS
Comment 5 2021-04-06 06:53:28 PDT
Committed r275514: <https://commits.webkit.org/r275514> All reviewed patches have been landed. Closing bug and clearing flags on attachment 425271 [details].
Radar WebKit Bug Importer
Comment 6 2021-04-06 06:54:16 PDT
Note You need to log in before you can comment on or make changes to this bug.